admin/gke_manifests/g-aSharedNamespace.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: shared
  labels:
    name: shared
